--- a/Argos/notebooks/FL-testing.ipynb
+++ b/Argos/notebooks/FL-testing.ipynb
@@ -16,8 +16,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-26T09:08:20.414883Z",
-     "start_time": "2025-07-26T09:08:19.134129Z"
+     "end_time": "2025-07-26T10:22:46.238182Z",
+     "start_time": "2025-07-26T10:22:45.151184Z"
     }
    },
    "source": [
@@ -42,32 +42,24 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T09:08:26.359979Z",
-     "start_time": "2025-07-26T09:08:20.419410Z"
+     "end_time": "2025-07-26T10:22:47.061834Z",
+     "start_time": "2025-07-26T10:22:46.241833Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "from Argos.dataset import *\n",
+    "from Argos.Dataset_utils import *\n",
     "from Argos.Client import new_client"
    ],
    "id": "56a76bc5eb1e1f8a",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100/100 [00:05<00:00, 17.77it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T09:08:28.464153Z",
-     "start_time": "2025-07-26T09:08:28.462747Z"
+     "end_time": "2025-07-26T10:22:47.119523Z",
+     "start_time": "2025-07-26T10:22:47.118310Z"
     }
    },
    "cell_type": "code",
@@ -79,18 +71,23 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T09:08:29.135564Z",
-     "start_time": "2025-07-26T09:08:29.132463Z"
+     "end_time": "2025-07-26T10:22:47.129496Z",
+     "start_time": "2025-07-26T10:22:47.126525Z"
     }
    },
    "cell_type": "code",
-   "source": "len(partitioned_dataset_indices)",
+   "source": "partitioned_dataset_indices",
    "id": "207909a41dfd7a64",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "defaultdict(list,\n",
+       "            {0: [7, 2, 8],\n",
+       "             1: [6, 7, 0],\n",
+       "             2: [0, 9, 5],\n",
+       "             3: [3, 8, 4],\n",
+       "             4: [1, 6]})"
       ]
      },
      "execution_count": 3,
@@ -109,8 +106,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T09:08:30.386979Z",
-     "start_time": "2025-07-26T09:08:30.385099Z"
+     "end_time": "2025-07-26T10:22:47.136460Z",
+     "start_time": "2025-07-26T10:22:47.134934Z"
     }
    },
    "cell_type": "code",
@@ -132,8 +129,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T09:08:31.632629Z",
-     "start_time": "2025-07-26T09:08:31.630684Z"
+     "end_time": "2025-07-26T10:22:47.147710Z",
+     "start_time": "2025-07-26T10:22:47.146171Z"
     }
    },
    "cell_type": "code",
@@ -144,9 +141,6 @@
     "strategy = FedAvg(\n",
     "    fraction_fit=1.0,  # Sample 100% of available clients for training\n",
     "    fraction_evaluate=0.5,  # Sample 50% of available clients for evaluation\n",
-    "    min_fit_clients=10,  # Never sample less than 10 clients for training\n",
-    "    min_evaluate_clients=5,  # Never sample less than 5 clients for evaluation\n",
-    "    min_available_clients=10,  # Wait until all 10 clients are available\n",
     ")"
    ],
    "id": "9809e3ced8b51eec",
@@ -156,8 +150,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T09:08:32.309283Z",
-     "start_time": "2025-07-26T09:08:32.307283Z"
+     "end_time": "2025-07-26T10:22:47.154074Z",
+     "start_time": "2025-07-26T10:22:47.152387Z"
     }
    },
    "cell_type": "code",
@@ -190,8 +184,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T09:08:32.853409Z",
-     "start_time": "2025-07-26T09:08:32.851668Z"
+     "end_time": "2025-07-26T10:22:47.159392Z",
+     "start_time": "2025-07-26T10:22:47.158011Z"
     }
    },
    "cell_type": "code",
@@ -208,8 +202,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T09:08:33.464885Z",
-     "start_time": "2025-07-26T09:08:33.463443Z"
+     "end_time": "2025-07-26T10:22:47.164183Z",
+     "start_time": "2025-07-26T10:22:47.163050Z"
     }
    },
    "cell_type": "code",
@@ -224,7 +218,7 @@
      "is_executing": true
     },
     "ExecuteTime": {
-     "start_time": "2025-07-26T09:08:34.400081Z"
+     "start_time": "2025-07-26T10:22:47.168397Z"
     }
    },
    "cell_type": "code",
@@ -244,54 +238,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "DEBUG:flwr:Asyncio event loop already running.\n",
       "\u001B[92mINFO \u001B[0m:      Starting Flower ServerApp, config: num_rounds=5, no round_timeout\n",
       "\u001B[92mINFO \u001B[0m:      \n",
       "\u001B[92mINFO \u001B[0m:      [INIT]\n",
       "\u001B[92mINFO \u001B[0m:      Requesting initial parameters from one random client\n",
-      "  0%|          | 0/100 [00:00<?, ?it/s]\n",
-      "  3%|▎         | 3/100 [00:00<00:05, 19.00it/s]\n",
-      "  6%|▌         | 6/100 [00:00<00:05, 17.65it/s]\n",
-      "  8%|▊         | 8/100 [00:00<00:05, 18.29it/s]\n",
-      " 10%|█         | 10/100 [00:00<00:06, 14.10it/s]\n",
-      " 13%|█▎        | 13/100 [00:00<00:05, 15.73it/s]\n",
-      " 15%|█▌        | 15/100 [00:00<00:05, 14.72it/s]\n",
-      " 18%|█▊        | 18/100 [00:01<00:04, 18.15it/s]\n",
-      " 20%|██        | 20/100 [00:01<00:04, 16.28it/s]\n",
-      " 23%|██▎       | 23/100 [00:01<00:04, 16.85it/s]\n",
-      " 25%|██▌       | 25/100 [00:01<00:04, 17.08it/s]\n",
-      " 27%|██▋       | 27/100 [00:01<00:04, 15.74it/s]\n",
-      " 29%|██▉       | 29/100 [00:01<00:04, 15.67it/s]\n",
-      " 31%|███       | 31/100 [00:01<00:04, 16.28it/s]\n",
-      " 33%|███▎      | 33/100 [00:02<00:04, 16.14it/s]\n",
-      " 37%|███▋      | 37/100 [00:02<00:03, 19.43it/s]\n",
-      " 39%|███▉      | 39/100 [00:02<00:03, 16.94it/s]\n",
-      " 41%|████      | 41/100 [00:02<00:03, 16.72it/s]\n",
-      " 44%|████▍     | 44/100 [00:02<00:03, 17.14it/s]\n",
-      " 47%|████▋     | 47/100 [00:02<00:02, 18.20it/s]\n",
-      " 49%|████▉     | 49/100 [00:02<00:02, 17.42it/s]\n",
-      " 51%|█████     | 51/100 [00:03<00:02, 16.37it/s]\n",
-      " 54%|█████▍    | 54/100 [00:03<00:02, 17.95it/s]\n",
-      " 57%|█████▋    | 57/100 [00:03<00:02, 20.19it/s]\n",
-      " 60%|██████    | 60/100 [00:03<00:01, 20.99it/s]\n",
-      " 63%|██████▎   | 63/100 [00:03<00:01, 20.09it/s]\n",
-      " 66%|██████▌   | 66/100 [00:03<00:01, 18.97it/s]\n",
-      " 69%|██████▉   | 69/100 [00:03<00:01, 19.48it/s]\n",
-      " 71%|███████   | 71/100 [00:04<00:01, 18.70it/s]\n",
-      " 74%|███████▍  | 74/100 [00:04<00:01, 19.64it/s]\n",
-      " 76%|███████▌  | 76/100 [00:04<00:01, 18.00it/s]\n",
-      " 80%|████████  | 80/100 [00:04<00:00, 23.01it/s]\n",
-      " 83%|████████▎ | 83/100 [00:04<00:00, 22.01it/s]\n",
-      " 86%|████████▌ | 86/100 [00:04<00:00, 19.12it/s]\n",
-      " 89%|████████▉ | 89/100 [00:04<00:00, 17.32it/s]\n",
-      " 91%|█████████ | 91/100 [00:05<00:00, 17.47it/s]\n",
-      " 93%|█████████▎| 93/100 [00:05<00:00, 16.76it/s]\n",
-      " 97%|█████████▋| 97/100 [00:05<00:00, 16.47it/s]\n",
-      "100%|██████████| 100/100 [00:05<00:00, 17.65it/s]\n",
       "\u001B[92mINFO \u001B[0m:      Received initial parameters from one random client\n",
       "\u001B[92mINFO \u001B[0m:      Starting evaluation of initial global parameters\n",
       "\u001B[92mINFO \u001B[0m:      Evaluation returned no results (`None`)\n",
       "\u001B[92mINFO \u001B[0m:      \n",
-      "\u001B[92mINFO \u001B[0m:      [ROUND 1]\n"
+      "\u001B[92mINFO \u001B[0m:      [ROUND 1]\n",
+      "\u001B[92mINFO \u001B[0m:      configure_fit: strategy sampled 5 clients (out of 5)\n",
+      "Training:   0%|          | 0/1 [00:00<?, ?it/s]\n",
+      "Training:   0%|          | 0/1 [00:00<?, ?it/s]\u001B[32m [repeated 4x across cluster] (Ray deduplicates logs by default. Set RAY_DEDUP_LOGS=0 to disable log deduplication, or see https://docs.ray.io/en/master/ray-observability/user-guides/configure-logging.html#log-deduplication for more options.)\u001B[0m\n"
      ]
     }
    ],
