--- a/Argos/notebooks/FL-testing.ipynb
+++ b/Argos/notebooks/FL-testing.ipynb
@@ -16,63 +16,53 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-26T10:22:46.238182Z",
-     "start_time": "2025-07-26T10:22:45.151184Z"
+     "end_time": "2025-07-26T11:30:27.962582Z",
+     "start_time": "2025-07-26T11:30:27.960362Z"
     }
    },
-   "source": [
-    "import os\n",
-    "import json\n",
-    "import logging\n",
-    "from PIL import Image\n",
-    "import torch\n",
-    "from torchvision import transforms\n",
-    "\n",
-    "import torch\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.patches as patches\n",
-    "import torchvision.transforms.functional as F\n",
-    "import random\n",
-    "import numpy as np\n",
-    "import json"
-   ],
+   "source": "from Argos.settings import CLASSES_JSON_FILE , DATASET_PATH , NUMBER_OF_CLIENTS , CLIENT_BATCH_SIZE , CLIENT_LEARNING_RATE",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T10:22:47.061834Z",
-     "start_time": "2025-07-26T10:22:46.241833Z"
+     "end_time": "2025-07-26T11:30:29.540718Z",
+     "start_time": "2025-07-26T11:30:29.537985Z"
     }
    },
    "cell_type": "code",
-   "source": [
-    "from Argos.Dataset_utils import *\n",
-    "from Argos.Client import new_client"
-   ],
+   "source": "from Argos.Dataset_utils import extract_label_mapping , MTSDDataset , partition_dataset, get_dataset_for_client",
    "id": "56a76bc5eb1e1f8a",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T10:22:47.119523Z",
-     "start_time": "2025-07-26T10:22:47.118310Z"
+     "end_time": "2025-07-26T11:30:30.414740Z",
+     "start_time": "2025-07-26T11:30:29.884137Z"
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "from torch.utils.data import Subset\n",
+    "\n",
+    "label_mapping = extract_label_mapping(CLASSES_JSON_FILE)\n",
+    "number_of_classes = len(label_mapping)\n",
+    "dataset = MTSDDataset(root_dir=DATASET_PATH)\n",
+    "dataset = Subset(dataset, list(range(10)))\n",
+    "partitioned_dataset_indices = partition_dataset(dataset=dataset, num_clients=NUMBER_OF_CLIENTS)\n"
+   ],
    "id": "e766be852e90676b",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T10:22:47.129496Z",
-     "start_time": "2025-07-26T10:22:47.126525Z"
+     "end_time": "2025-07-26T11:30:31.815205Z",
+     "start_time": "2025-07-26T11:30:31.813203Z"
     }
    },
    "cell_type": "code",
@@ -83,19 +73,19 @@
      "data": {
       "text/plain": [
        "defaultdict(list,\n",
-       "            {0: [7, 2, 8],\n",
-       "             1: [6, 7, 0],\n",
-       "             2: [0, 9, 5],\n",
-       "             3: [3, 8, 4],\n",
-       "             4: [1, 6]})"
+       "            {0: [9, 0, 0],\n",
+       "             1: [6, 5, 6],\n",
+       "             2: [3, 8, 7, 8],\n",
+       "             3: [7, 1],\n",
+       "             4: [4, 2]})"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -106,19 +96,49 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T10:22:47.136460Z",
-     "start_time": "2025-07-26T10:22:47.134934Z"
+     "end_time": "2025-07-26T11:30:41.733013Z",
+     "start_time": "2025-07-26T11:30:41.313046Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "from Argos.Model import get_model\n",
+    "from Argos.Client import Client\n",
+    "from flwr.common import Context\n",
+    "from Argos.settings import DEVICE\n",
     "from flwr.client import ClientApp\n",
+    "\n",
+    "\n",
+    "def new_client(context : Context) -> Client:\n",
+    "    \"\"\"Create a Flower client representing a single organization.\"\"\"\n",
+    "\n",
+    "    neural_network = get_model(\n",
+    "        num_classes=number_of_classes\n",
+    "    ).to(DEVICE)\n",
+    "\n",
+    "    partition_id = context.node_config[\"partition-id\"]\n",
+    "    train_dataset , val_dataset ,test_dataset = get_dataset_for_client(\n",
+    "        partition_id=partition_id,\n",
+    "        full_dataset=dataset,\n",
+    "        partitioned_dataset_indices=partitioned_dataset_indices,\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "    return Client(\n",
+    "        model=neural_network,\n",
+    "        train_dataset=train_dataset,\n",
+    "        eval_dataset=val_dataset,\n",
+    "        learning_rate=CLIENT_LEARNING_RATE,\n",
+    "        batch_size=CLIENT_BATCH_SIZE,\n",
+    "    ).to_client()\n",
+    "\n",
+    "\n",
     "\n",
     "client = ClientApp(client_fn=new_client)"
    ],
    "id": "a5df96ab358c599b",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -129,8 +149,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T10:22:47.147710Z",
-     "start_time": "2025-07-26T10:22:47.146171Z"
+     "end_time": "2025-07-26T11:31:09.259844Z",
+     "start_time": "2025-07-26T11:31:09.256241Z"
     }
    },
    "cell_type": "code",
@@ -145,13 +165,13 @@
    ],
    "id": "9809e3ced8b51eec",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T10:22:47.154074Z",
-     "start_time": "2025-07-26T10:22:47.152387Z"
+     "end_time": "2025-07-26T11:33:46.132778Z",
+     "start_time": "2025-07-26T11:33:46.128984Z"
     }
    },
    "cell_type": "code",
@@ -179,31 +199,36 @@
    ],
    "id": "4719047ee6aad726",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T10:22:47.159392Z",
-     "start_time": "2025-07-26T10:22:47.158011Z"
+     "end_time": "2025-07-26T11:34:02.050538Z",
+     "start_time": "2025-07-26T11:34:02.047876Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Specify the resources each of your clients need\n",
-    "# By default, each client will be allocated x CPU and 0x GPUs\n",
-    "backend_config = {\"client_resources\": {\"num_cpus\": 2, \"num_gpus\": 0.0}}\n",
+    "# By default, each client will be allocated 2x CPU and 0x GPUs\n",
+    "\n",
+    "backend_config = {\n",
+    "    \"client_resources\": {\n",
+    "        \"num_cpus\": 2, \"num_gpus\": 0.0\n",
+    "    }\n",
+    "}\n",
     "\n"
    ],
    "id": "2f9c54009c6f98de",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T10:22:47.164183Z",
-     "start_time": "2025-07-26T10:22:47.163050Z"
+     "end_time": "2025-07-26T10:40:22.686990Z",
+     "start_time": "2025-07-26T10:40:22.685816Z"
     }
    },
    "cell_type": "code",
@@ -218,7 +243,7 @@
      "is_executing": true
     },
     "ExecuteTime": {
-     "start_time": "2025-07-26T10:22:47.168397Z"
+     "start_time": "2025-07-26T10:40:22.690979Z"
     }
    },
    "cell_type": "code",
@@ -249,8 +274,7 @@
       "\u001B[92mINFO \u001B[0m:      \n",
       "\u001B[92mINFO \u001B[0m:      [ROUND 1]\n",
       "\u001B[92mINFO \u001B[0m:      configure_fit: strategy sampled 5 clients (out of 5)\n",
-      "Training:   0%|          | 0/1 [00:00<?, ?it/s]\n",
-      "Training:   0%|          | 0/1 [00:00<?, ?it/s]\u001B[32m [repeated 4x across cluster] (Ray deduplicates logs by default. Set RAY_DEDUP_LOGS=0 to disable log deduplication, or see https://docs.ray.io/en/master/ray-observability/user-guides/configure-logging.html#log-deduplication for more options.)\u001B[0m\n"
+      "Training:   0%|          | 0/1 [00:00<?, ?it/s]\n"
      ]
     }
    ],
