--- a/Argos/notebooks/Kagglable-FL-testing.ipynb
+++ b/Argos/notebooks/Kagglable-FL-testing.ipynb
@@ -22,6 +22,7 @@
    },
    "outputs": [],
    "source": [
+    "import model\n",
     "!pip3 install -q \"flwr[simulation]\" \"flwr-datasets[vision]\" torch torchvision matplotlib"
    ]
   },
@@ -464,7 +465,7 @@
     "\n",
     "    def fit(self, parameters, config):\n",
     "        self.set_parameters(parameters)\n",
-    "        self.model.train()\n",
+    "        model.train()\n",
     "        train(\n",
     "            model=self.model,\n",
     "            dataloader=self.train_loader,\n",
@@ -879,13 +880,13 @@
      "output_type": "stream",
      "text": [
       "DEBUG:flwr:Asyncio event loop already running.\n",
-      "\u001b[92mINFO \u001b[0m:      Starting Flower ServerApp, config: num_rounds=2, round_timeout=30.0s\n",
-      "\u001b[92mINFO \u001b[0m:      \n",
-      "\u001b[92mINFO \u001b[0m:      [INIT]\n",
-      "\u001b[92mINFO \u001b[0m:      Requesting initial parameters from one random client\n",
-      "\u001b[91mERROR \u001b[0m:     An exception was raised when processing a message by RayBackend\n",
-      "\u001b[91mERROR \u001b[0m:     cannot access local variable 'future' where it is not associated with a value\n",
-      "\u001b[91mERROR \u001b[0m:     Traceback (most recent call last):\n",
+      "\u001B[92mINFO \u001B[0m:      Starting Flower ServerApp, config: num_rounds=2, round_timeout=30.0s\n",
+      "\u001B[92mINFO \u001B[0m:      \n",
+      "\u001B[92mINFO \u001B[0m:      [INIT]\n",
+      "\u001B[92mINFO \u001B[0m:      Requesting initial parameters from one random client\n",
+      "\u001B[91mERROR \u001B[0m:     An exception was raised when processing a message by RayBackend\n",
+      "\u001B[91mERROR \u001B[0m:     cannot access local variable 'future' where it is not associated with a value\n",
+      "\u001B[91mERROR \u001B[0m:     Traceback (most recent call last):\n",
       "  File \"python/ray/_raylet.pyx\", line 912, in ray._raylet.prepare_args_internal\n",
       "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/ray/_private/serialization.py\", line 519, in serialize\n",
       "    return self._serialize_to_msgpack(value)\n",
@@ -944,32 +945,32 @@
       "==============================================================================\n",
       "Checking Serializability of <function start_vce.<locals>._load at 0x16a50b060>\n",
       "==============================================================================\n",
-      "\u001b[31m!!! FAIL\u001b[39m serialization: cannot pickle '_Ops' object\n",
+      "\u001B[31m!!! FAIL\u001B[39m serialization: cannot pickle '_Ops' object\n",
       "Detected 1 global variables. Checking serializability...\n",
       "    Serializing 'get_load_client_app_fn' <function get_load_client_app_fn at 0x1682494e0>...\n",
       "Detected 5 nonlocal variables. Checking serializability...\n",
       "    Serializing 'app_dir' /Users/mahdi/Desktop/CPS/CAVs-FL/Argos/notebooks...\n",
       "    Serializing 'client_app' <flwr.client.client_app.ClientApp object at 0x16a50f750>...\n",
-      "    \u001b[31m!!! FAIL\u001b[39m serialization: cannot pickle '_Ops' object\n",
+      "    \u001B[31m!!! FAIL\u001B[39m serialization: cannot pickle '_Ops' object\n",
       "        Serializing '_call' <function ClientApp.__init__.<locals>.ffn at 0x16a50a8e0>...\n",
-      "        \u001b[31m!!! FAIL\u001b[39m serialization: cannot pickle '_Ops' object\n",
+      "        \u001B[31m!!! FAIL\u001B[39m serialization: cannot pickle '_Ops' object\n",
       "        Detected 1 global variables. Checking serializability...\n",
       "            Serializing 'handle_legacy_message_from_msgtype' <function handle_legacy_message_from_msgtype at 0x168000400>...\n",
       "        Detected 1 nonlocal variables. Checking serializability...\n",
       "            Serializing 'client_fn' <function new_client at 0x16a50a660>...\n",
-      "            \u001b[31m!!! FAIL\u001b[39m serialization: cannot pickle '_Ops' object\n",
+      "            \u001B[31m!!! FAIL\u001B[39m serialization: cannot pickle '_Ops' object\n",
       "        Serializing '_call' <function ClientApp.__init__.<locals>.ffn at 0x16a50a8e0>...\n",
-      "        \u001b[31m!!! FAIL\u001b[39m serialization: cannot pickle '_Ops' object\n",
+      "        \u001B[31m!!! FAIL\u001B[39m serialization: cannot pickle '_Ops' object\n",
       "        Detected 1 global variables. Checking serializability...\n",
       "            Serializing 'handle_legacy_message_from_msgtype' <function handle_legacy_message_from_msgtype at 0x168000400>...\n",
       "        Detected 1 nonlocal variables. Checking serializability...\n",
       "            Serializing 'client_fn' <function new_client at 0x16a50a660>...\n",
-      "            \u001b[31m!!! FAIL\u001b[39m serialization: cannot pickle '_Ops' object\n",
+      "            \u001B[31m!!! FAIL\u001B[39m serialization: cannot pickle '_Ops' object\n",
       "==============================================================================\n",
       "Variable: \n",
       "\n",
-      "\t\u001b[1mFailTuple(client_fn [obj=<function new_client at 0x16a50a660>, parent=<function ClientApp.__init__.<locals>.ffn at 0x16a50a8e0>])\n",
-      "FailTuple(client_fn [obj=<function new_client at 0x16a50a660>, parent=<function ClientApp.__init__.<locals>.ffn at 0x16a50a8e0>])\u001b[0m\n",
+      "\t\u001B[1mFailTuple(client_fn [obj=<function new_client at 0x16a50a660>, parent=<function ClientApp.__init__.<locals>.ffn at 0x16a50a8e0>])\n",
+      "FailTuple(client_fn [obj=<function new_client at 0x16a50a660>, parent=<function ClientApp.__init__.<locals>.ffn at 0x16a50a8e0>])\u001B[0m\n",
       "\n",
       "was found to be non-serializable. There may be multiple other undetected variables that were non-serializable. \n",
       "Consider either removing the instantiation/imports of these variables or moving the instantiation into the scope of the function/class. \n",
@@ -990,8 +991,8 @@
       "                                     ^^^^^^\n",
       "UnboundLocalError: cannot access local variable 'future' where it is not associated with a value\n",
       "\n",
-      "\u001b[91mERROR \u001b[0m:     ServerApp thread raised an exception: Message contains an Error (reason: <class 'UnboundLocalError'>:<'cannot access local variable 'future' where it is not associated with a value'>). It originated during client-side execution of a message.\n",
-      "\u001b[91mERROR \u001b[0m:     Traceback (most recent call last):\n",
+      "\u001B[91mERROR \u001B[0m:     ServerApp thread raised an exception: Message contains an Error (reason: <class 'UnboundLocalError'>:<'cannot access local variable 'future' where it is not associated with a value'>). It originated during client-side execution of a message.\n",
+      "\u001B[91mERROR \u001B[0m:     Traceback (most recent call last):\n",
       "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/flwr/simulation/run_simulation.py\", line 285, in server_th_with_start_checks\n",
       "    updated_context = _run(\n",
       "                      ^^^^^\n",
@@ -1058,13 +1059,13 @@
      "evalue": "Exception in ServerApp thread",
      "output_type": "error",
      "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mflwr\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01msimulation\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m run_simulation\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[43mrun_simulation\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[43m    \u001b[49m\u001b[43mserver_app\u001b[49m\u001b[43m=\u001b[49m\u001b[43mserver\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m    \u001b[49m\u001b[43mclient_app\u001b[49m\u001b[43m=\u001b[49m\u001b[43mclient\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m    \u001b[49m\u001b[43mnum_supernodes\u001b[49m\u001b[43m=\u001b[49m\u001b[43mNUMBER_OF_CLIENTS\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[43m    \u001b[49m\u001b[43mbackend_config\u001b[49m\u001b[43m=\u001b[49m\u001b[43mbackend_config\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/flwr/simulation/run_simulation.py:228\u001b[39m, in \u001b[36mrun_simulation\u001b[39m\u001b[34m(server_app, client_app, num_supernodes, backend_name, backend_config, enable_tf_gpu_growth, verbose_logging)\u001b[39m\n\u001b[32m    218\u001b[39m     warn_deprecated_feature_with_example(\n\u001b[32m    219\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mPassing `enable_tf_gpu_growth=True` is deprecated.\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m    220\u001b[39m         example_message=\u001b[33m\"\u001b[39m\u001b[33mInstead, set the `TF_FORCE_GPU_ALLOW_GROWTH` environment \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   (...)\u001b[39m\u001b[32m    223\u001b[39m         \u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[33mflwr.simulation.run_simulationt(...)\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m    224\u001b[39m     )\n\u001b[32m    226\u001b[39m _check_ray_support(backend_name)\n\u001b[32m--> \u001b[39m\u001b[32m228\u001b[39m _ = \u001b[43m_run_simulation\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    229\u001b[39m \u001b[43m    \u001b[49m\u001b[43mnum_supernodes\u001b[49m\u001b[43m=\u001b[49m\u001b[43mnum_supernodes\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    230\u001b[39m \u001b[43m    \u001b[49m\u001b[43mclient_app\u001b[49m\u001b[43m=\u001b[49m\u001b[43mclient_app\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    231\u001b[39m \u001b[43m    \u001b[49m\u001b[43mserver_app\u001b[49m\u001b[43m=\u001b[49m\u001b[43mserver_app\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    232\u001b[39m \u001b[43m    \u001b[49m\u001b[43mbackend_name\u001b[49m\u001b[43m=\u001b[49m\u001b[43mbackend_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    233\u001b[39m \u001b[43m    \u001b[49m\u001b[43mbackend_config\u001b[49m\u001b[43m=\u001b[49m\u001b[43mbackend_config\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    234\u001b[39m \u001b[43m    \u001b[49m\u001b[43menable_tf_gpu_growth\u001b[49m\u001b[43m=\u001b[49m\u001b[43menable_tf_gpu_growth\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    235\u001b[39m \u001b[43m    \u001b[49m\u001b[43mverbose_logging\u001b[49m\u001b[43m=\u001b[49m\u001b[43mverbose_logging\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    236\u001b[39m \u001b[43m    \u001b[49m\u001b[43mexit_event\u001b[49m\u001b[43m=\u001b[49m\u001b[43mEventType\u001b[49m\u001b[43m.\u001b[49m\u001b[43mPYTHON_API_RUN_SIMULATION_LEAVE\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    237\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/flwr/simulation/run_simulation.py:527\u001b[39m, in \u001b[36m_run_simulation\u001b[39m\u001b[34m(num_supernodes, exit_event, client_app, server_app, backend_name, backend_config, client_app_attr, server_app_attr, server_app_run_config, app_dir, flwr_dir, run, enable_tf_gpu_growth, verbose_logging, is_app)\u001b[39m\n\u001b[32m    523\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m asyncio_loop_running:\n\u001b[32m    524\u001b[39m         \u001b[38;5;66;03m# Set logger propagation to False to prevent duplicated log output in Colab.\u001b[39;00m\n\u001b[32m    525\u001b[39m         logger = set_logger_propagation(logger, \u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[32m--> \u001b[39m\u001b[32m527\u001b[39m     updated_context = \u001b[43m_main_loop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    528\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m updated_context\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/flwr/simulation/run_simulation.py:425\u001b[39m, in \u001b[36m_main_loop\u001b[39m\u001b[34m(num_supernodes, backend_name, backend_config_stream, app_dir, is_app, enable_tf_gpu_growth, run, exit_event, flwr_dir, client_app, client_app_attr, server_app, server_app_attr, server_app_run_config)\u001b[39m\n\u001b[32m    423\u001b[39m         serverapp_th.join()\n\u001b[32m    424\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m server_app_thread_has_exception.is_set():\n\u001b[32m--> \u001b[39m\u001b[32m425\u001b[39m             \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mException in ServerApp thread\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    427\u001b[39m log(DEBUG, \u001b[33m\"\u001b[39m\u001b[33mStopping Simulation Engine now.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    428\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m updated_context\n",
-      "\u001b[31mRuntimeError\u001b[39m: Exception in ServerApp thread"
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mRuntimeError\u001B[39m                              Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[13]\u001B[39m\u001B[32m, line 3\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mflwr\u001B[39;00m\u001B[34;01m.\u001B[39;00m\u001B[34;01msimulation\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m run_simulation\n\u001B[32m----> \u001B[39m\u001B[32m3\u001B[39m \u001B[43mrun_simulation\u001B[49m\u001B[43m(\u001B[49m\n\u001B[32m      4\u001B[39m \u001B[43m    \u001B[49m\u001B[43mserver_app\u001B[49m\u001B[43m=\u001B[49m\u001B[43mserver\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m      5\u001B[39m \u001B[43m    \u001B[49m\u001B[43mclient_app\u001B[49m\u001B[43m=\u001B[49m\u001B[43mclient\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m      6\u001B[39m \u001B[43m    \u001B[49m\u001B[43mnum_supernodes\u001B[49m\u001B[43m=\u001B[49m\u001B[43mNUMBER_OF_CLIENTS\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m      7\u001B[39m \u001B[43m    \u001B[49m\u001B[43mbackend_config\u001B[49m\u001B[43m=\u001B[49m\u001B[43mbackend_config\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m      8\u001B[39m \u001B[43m)\u001B[49m\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/flwr/simulation/run_simulation.py:228\u001B[39m, in \u001B[36mrun_simulation\u001B[39m\u001B[34m(server_app, client_app, num_supernodes, backend_name, backend_config, enable_tf_gpu_growth, verbose_logging)\u001B[39m\n\u001B[32m    218\u001B[39m     warn_deprecated_feature_with_example(\n\u001B[32m    219\u001B[39m         \u001B[33m\"\u001B[39m\u001B[33mPassing `enable_tf_gpu_growth=True` is deprecated.\u001B[39m\u001B[33m\"\u001B[39m,\n\u001B[32m    220\u001B[39m         example_message=\u001B[33m\"\u001B[39m\u001B[33mInstead, set the `TF_FORCE_GPU_ALLOW_GROWTH` environment \u001B[39m\u001B[33m\"\u001B[39m\n\u001B[32m   (...)\u001B[39m\u001B[32m    223\u001B[39m         \u001B[33m\"\u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;130;01m\\t\u001B[39;00m\u001B[33mflwr.simulation.run_simulationt(...)\u001B[39m\u001B[33m\"\u001B[39m,\n\u001B[32m    224\u001B[39m     )\n\u001B[32m    226\u001B[39m _check_ray_support(backend_name)\n\u001B[32m--> \u001B[39m\u001B[32m228\u001B[39m _ = \u001B[43m_run_simulation\u001B[49m\u001B[43m(\u001B[49m\n\u001B[32m    229\u001B[39m \u001B[43m    \u001B[49m\u001B[43mnum_supernodes\u001B[49m\u001B[43m=\u001B[49m\u001B[43mnum_supernodes\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    230\u001B[39m \u001B[43m    \u001B[49m\u001B[43mclient_app\u001B[49m\u001B[43m=\u001B[49m\u001B[43mclient_app\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    231\u001B[39m \u001B[43m    \u001B[49m\u001B[43mserver_app\u001B[49m\u001B[43m=\u001B[49m\u001B[43mserver_app\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    232\u001B[39m \u001B[43m    \u001B[49m\u001B[43mbackend_name\u001B[49m\u001B[43m=\u001B[49m\u001B[43mbackend_name\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    233\u001B[39m \u001B[43m    \u001B[49m\u001B[43mbackend_config\u001B[49m\u001B[43m=\u001B[49m\u001B[43mbackend_config\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    234\u001B[39m \u001B[43m    \u001B[49m\u001B[43menable_tf_gpu_growth\u001B[49m\u001B[43m=\u001B[49m\u001B[43menable_tf_gpu_growth\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    235\u001B[39m \u001B[43m    \u001B[49m\u001B[43mverbose_logging\u001B[49m\u001B[43m=\u001B[49m\u001B[43mverbose_logging\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    236\u001B[39m \u001B[43m    \u001B[49m\u001B[43mexit_event\u001B[49m\u001B[43m=\u001B[49m\u001B[43mEventType\u001B[49m\u001B[43m.\u001B[49m\u001B[43mPYTHON_API_RUN_SIMULATION_LEAVE\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    237\u001B[39m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/flwr/simulation/run_simulation.py:527\u001B[39m, in \u001B[36m_run_simulation\u001B[39m\u001B[34m(num_supernodes, exit_event, client_app, server_app, backend_name, backend_config, client_app_attr, server_app_attr, server_app_run_config, app_dir, flwr_dir, run, enable_tf_gpu_growth, verbose_logging, is_app)\u001B[39m\n\u001B[32m    523\u001B[39m     \u001B[38;5;28;01mif\u001B[39;00m asyncio_loop_running:\n\u001B[32m    524\u001B[39m         \u001B[38;5;66;03m# Set logger propagation to False to prevent duplicated log output in Colab.\u001B[39;00m\n\u001B[32m    525\u001B[39m         logger = set_logger_propagation(logger, \u001B[38;5;28;01mFalse\u001B[39;00m)\n\u001B[32m--> \u001B[39m\u001B[32m527\u001B[39m     updated_context = \u001B[43m_main_loop\u001B[49m\u001B[43m(\u001B[49m\u001B[43m*\u001B[49m\u001B[43margs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m    528\u001B[39m \u001B[38;5;28;01mreturn\u001B[39;00m updated_context\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/flwr/simulation/run_simulation.py:425\u001B[39m, in \u001B[36m_main_loop\u001B[39m\u001B[34m(num_supernodes, backend_name, backend_config_stream, app_dir, is_app, enable_tf_gpu_growth, run, exit_event, flwr_dir, client_app, client_app_attr, server_app, server_app_attr, server_app_run_config)\u001B[39m\n\u001B[32m    423\u001B[39m         serverapp_th.join()\n\u001B[32m    424\u001B[39m         \u001B[38;5;28;01mif\u001B[39;00m server_app_thread_has_exception.is_set():\n\u001B[32m--> \u001B[39m\u001B[32m425\u001B[39m             \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mRuntimeError\u001B[39;00m(\u001B[33m\"\u001B[39m\u001B[33mException in ServerApp thread\u001B[39m\u001B[33m\"\u001B[39m)\n\u001B[32m    427\u001B[39m log(DEBUG, \u001B[33m\"\u001B[39m\u001B[33mStopping Simulation Engine now.\u001B[39m\u001B[33m\"\u001B[39m)\n\u001B[32m    428\u001B[39m \u001B[38;5;28;01mreturn\u001B[39;00m updated_context\n",
+      "\u001B[31mRuntimeError\u001B[39m: Exception in ServerApp thread"
      ]
     }
    ],
